# x3div

./: CMakeLists.txt  Makefile
cmake/: FindDECOMP2D.cmake  X3D_fft.cmake
decomp2d/: fft_cufft.f90
src/: CMakeLists.txt  bc_tgv.f90  bc_tgv2d.f90  case.f90  module_param.f90  navier.f90  parameters.f90  poisson.f90  thomas.f90  time_integrators.f90  tools.f90  transeq.f90  var.f90  x3d_derive.f90  x3d_operator_1d.f90  x3d_staggered.f90  x3d_tools.f90  x3d_transpose.f90  xcompact3d.f90
